# work_13_github_actions

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
myproject/: conftest.py  pytest.ini  run.sh
myproject/myproject/: celery.py  settings.py  urls.py
myproject/store/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
myproject/store/management/commands/: generate_data.py  u
myproject/store/migrations/: 0001_initial.py
myproject/store/templates/store/: base.html  category_detail.html  category_list.html  home.html  product_create.html  product_detail.html  product_edit.html  product_list.html
myproject/store/tests/: test_models.py
